--- a/Section22-JavaFX/Events/src/sampleevents/sample.fxml
+++ b/Section22-JavaFX/Events/src/sampleevents/sample.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.CheckBox?>
-<GridPane fx:controller="sample.Controller"
+<GridPane fx:controller="sampleevents.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
     <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="0"
     onKeyReleased="#handleKeyReleased"/>
