--- a/Section22-JavaFX/TodoList/src/com/etixi/todoList/TodoListemDialog.fxml
+++ b/Section22-JavaFX/TodoList/src/com/etixi/todoList/TodoListemDialog.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.control.DatePicker?>
 <DialogPane fx:controller="com.etixi.todoList.DialogController"
             xmlns:fx="http://javafx.com/fxml">
-
     <headerText>
-        Wecould put instructions here
+        We could put instructions here
     </headerText>
     <content>
         <GridPane vgap="10" hgap="10">
-            <Label text="Short Description" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+            <Label text="Short Description:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
             <TextField fx:id="shortDescriptionField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
             <Label text="Details:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextArea fx:id="detailsArea" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-            <Label text="DeadLine" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+            <TextArea fx:id="detailsArea" GridPane.rowIndex="1" GridPane.columnIndex="1"
+                      wrapText="true"/>
+            <Label text="Deadline:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
             <DatePicker fx:id="deadlinePicker" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </GridPane>
     </content>
